src/test/asg1/errors/expr-error.j
class Main {

Void main(){
    Int x;
    Int y;
    Bool b;
    x = 1 + 2 + 3);
    y = 100;
    y = y + 101;
    x = 1 + 2 3;
    y = y + 102;
    x = new Int();
    x = x + 1;
    x = x + 2;
}

}